--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin:0px;
     font-family: 'Stylish', sans-serif;
 }
 h1{
@@ -13,7 +14,18 @@ p{
 .half-width{
     width:40%;
     float:left;
+    margin-left:5%;
+    padding-left:2%;
 }
 .half-width img{
     width:100%;
+}
+.top-banner{
+    background-image: url("C:/web development/my projects/web-portfolio/images/top-banner.png");
+    
+    background-repeat: no-repeat;
+
+}
+section{
+    height: 500px;
 }
