added box shadow and footer

--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlighter{
+h2{
+    font-size: 30px;
+}
+h3{
+    font-size:20px;
+}
+.orange-highlighter{
     color:orange;
 }
 p{
     font-size: 20px;
+    color:dimgray;
 }
 .half-width{
     width:40%;
@@ -28,6 +35,7 @@ p{
 }
 section{
     height: 500px;
+    padding-bottom:100px;
 }
 .link-button{
     text-decoration: none ;
@@ -36,4 +44,33 @@ section{
     border-radius:5px;
     color:white;
     font-weight:700;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position : right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height:80%;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-color: white;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg,lightSalmon,tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg,blue,cyan);
+    border-image-slice:1;
+}
+footer p{
+    text-align: center;
 }
